--- a/devportfolio-master/index.html
+++ b/devportfolio-master/index.html
@@ -50,7 +50,7 @@
         <div id="lead-content">
             <h1>Jason Le</h1>
             <h2>Software Engineer</h2>
-            <a href="https://pdf.ac/1HXmvp" class="btn-rounded-white" download>Download Resume</a>
+            <a href="" class="btn-rounded-white" download>Download Resume</a>
         </div>
         <!-- End #lead-content -->
 
